# rusty-golf

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  ex.1.html
.cargo/: config.toml
.trunk/: trunk.yaml
actix/: Cargo.toml
actix/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs  storage.rs  timing.rs
docs/: README.md  TODO.md  cache.md  htmx.md  miniflare.md  mvu.md  tests.md  tests_todo.md
examples/: db_password.txt  docker-compose.yml  init_db.sql
examples/miniflare/: Dockerfile  Makefile  rusty-golf-miniflare.container  worker-build
rusty-golf-actix/: Cargo.toml
rusty-golf-actix/src/: lib.rs  main.rs
rusty-golf-core/: Cargo.toml
rusty-golf-core/src/: error.rs  lib.rs  storage.rs
rusty-golf-serverless/: Cargo.toml  wrangler.toml
rusty-golf-serverless/docs/: README.md  plan.md
rusty-golf-serverless/scripts/: build_local.sh  seed_event.sh  seed_kv_from_eup.sh  seed_test1_local.sh  start_miniflare_local.sh  worker-build
rusty-golf-serverless/src/: espn_client.rs  lib.rs  storage.rs
rusty-golf-serverless/static/alt/: zen218.v4.css
rusty-golf-setup/: 401703515_espn.json  Cargo.toml
rusty-golf-setup/docs/: README.md
rusty-golf-setup/src/: config.rs  espn.rs  lib.rs  main.rs
rusty-golf-tests/: Cargo.toml
rusty-golf-tests/tests/: test01_serverless.rs  test01_test_scores.rs  test03_sql_trait_fns.rs  test04_cache.rs  test05_dbprefill.rs  test06_bar_width.rs  test07_new_step_factor.rs  test08_listing.rs  test08_relative_urls.rs  test09_setup_oneshot.rs  test10_serverless.rs  test11_listing.rs  test1_serverless.rs  test1_test_scores.rs  test3_sql_trait_fns.rs  test4_cache.rs  test5_dbprefill.rs  test6_bar_width.rs  test7_new_step_factor.rs  test8_relative_urls.rs
rusty-golf-tests/tests/common/: mod.rs  serverless.rs
rusty-golf-tests/tests/test07/: detailed_scores_401580355.json  summary_scores_x_401580355.json
rusty-golf-tests/tests/test07/debug_401703504/: actual_output.html
rusty-golf-tests/tests/test09/: README.md  event_401580351.json  event_401580360.json  event_401811927.json
rusty-golf-tests/tests/test7/debug_401580355/: actual_output.html
serverless/: Cargo.toml  build.rs  wrangler.toml
serverless/docs/: README.md  Timing_results.md  admin_endpoints.md  cache_plan.md  plan.md
serverless/scripts/: build_local.sh  seed_test1_local.sh  start_miniflare_local.sh
serverless/src/: admin.rs  admin_auth.rs  admin_types.rs  espn_client.rs  index.rs  instrument.rs  lib.rs  listing.rs  scores.rs  static_assets.rs  storage.rs  storage_admin_lock.rs  storage_admin_seed.rs  storage_admin_seed_helpers.rs  storage_impl.rs  storage_kv.rs  storage_types.rs  utils.rs  version.rs
setup/: 401703515_espn.json  Cargo.toml
setup/docs/: README.md
setup/src/: espn.rs  event_details.rs  lib.rs  main.rs
setup/src/config/: cli.rs  get_event_details.rs  mod.rs  new_event.rs  new_event_helpers.rs  parse.rs  seed.rs  update_event.rs
setup/src/event_details/: date_format.rs
setup/src/repl/: commands.rs  complete.rs  helper.rs  mod.rs  one_shot.rs  one_shot_helpers.rs  parse.rs  payload.rs  prompt.rs
setup/src/repl/interactive/: bettors.rs  events.rs  golfers.rs  mod.rs  setup.rs  setup_helpers.rs  update.rs
setup/src/repl/interactive/events/: details.rs  tests.rs
setup/src/repl/state/: bettors.rs  cache.rs  eup.rs  events.rs  kv.rs  kv_helpers.rs  mod.rs
setup/src/repl/state/events/: tests.rs
setup/src/seed/: espn_header.rs  eup.rs  files.rs  mod.rs
src/: args.rs  cache.rs  db.rs  espn.rs  lib.rs  main.rs  model.rs  score.rs
src/admin/: router.rs
src/args/: database.rs  mod.rs  types.rs  validation.rs
src/controller/: cache.rs  db_prefill.rs  espn.rs  score.rs
src/db/: db.rs  db2.rs  query.rs
src/model/: admin_model.rs  database.rs  database2.rs  database_read.rs  database_write.rs  db.rs  espn.rs  event.rs  golfer.rs  mod.rs  model.rs  score.rs  (+3 more)
static/: admin.js  admin00.js  admin01.js  admin_landing.js  ex.1.html  ex.2.html  ex.css  ex.html  ex.js  params.js  scores.js  styles.css  styles.v2.css  tablesort.js
tests/: Cargo.toml  espn.json_responses.json  scoredata.json  test1.rs  test1.sql  test1_expected_output.json  test1_test_scores.rs  test1_test_scores_endpoint.rs  test2.sql  test3.rs  test3_espn_json_responses.json  test3_scoredata.json  test3_sql_trait_fns.rs  test4.rs  test4_cache.rs  test5_dbprefill.json  test5_dbprefill.rs  test6_bar_width.rs  test7_new_step_factor.rs  test8_relative_urls.rs
(+260 files in other folders)
