[package]
name = "rusty-golf"
version = "0.1.1"
edition = "2021"

[dependencies]
# checked 9/22/2024
# latest version of tokio 1 branch 
tokio = { version = "1", features = ["full"] }  
# latest version of serde 1.0 branch 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#axum = "0.7"
#dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
#tokio-postgres = "0.7"
chrono = "0.4"
actix-web = "4.0"
maud = "0.26"
actix-files = "0.6"
#actix-rt = "2.5"
regex = "1"
function_name = "0.3"
deadpool-postgres = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "postgres", "sqlite", "chrono"] }
#async-trait = "0.1"
sql-middleware = { path = "../sql-middleware" }
clap = { version = "4", features = ["derive"] }
futures = "0.3.31"


[dependencies.tokio-util]
version = "0.7"
features = ["full"]

[dev-dependencies]
#actix-rt = "2.5"
#actix-web = { version = "4" }
#serde_json = "1.0"
#sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
#tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
#env_logger = "0.10"
