[package]
name = "rusty-golf"
version = "0.1.4"
edition = "2024"

[dependencies]
# checked mar 2025
# latest version of tokio 1 branch 
tokio = { version = "1", features = ["full"] }  
# latest version of serde 1.0 branch 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0", features = ["json"] }
chrono = "0"
actix-web = "4"
maud = "0"
actix-files = "0"
regex = "1"
function_name = "0"
deadpool-postgres = "0"
sql-middleware = "0"
clap = { version = "4", features = ["derive"] }
futures = "0"

[dependencies.tokio-util]
version = "0.7"
features = ["full"]