[package]
name = "rusty-golf"
version = "0.1.7"
edition = "2024"

[dependencies]
# checked sept 2025
# `cargo stale`
# latest version of tokio 1 branch 
tokio = { version = "1", features = ["full"] }  
# latest version of serde 1.0 branch 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0", features = ["json"] }
chrono = "0"
actix-web = "4"
maud = "0"
actix-files = "0"
regex = "1"
function_name = "0"
deadpool-postgres = "0"
sql-middleware = "0"
clap = { version = "4", features = ["derive"] }
futures = "0"
ahash = "0"
#rusqlite = { version = "0", features = ["bundled"] }

[dependencies.tokio-util]
version = "0.7"
features = ["full"]

[dev-dependencies]
scraper = "0"

# [patch.crates-io]
# sql-middleware = { path = "../sql-middleware" }
