[package]
name = "rusty-golf-serverless"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rusty-golf-core = { path = "../rusty-golf-core" }
worker = "0"
async-trait = "0"
chrono = "0"
futures = "0"
getrandom = { version = "0", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
