[package]
name = "rusty-golf-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = "0"
dotenvy = "0"
reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
rusty-golf-core = { path = "../rusty-golf-core" }
scraper = "0"
serde_json = "1"
sql-middleware = "0.4.0"
tokio = { version = "1", features = ["full"] }
rusty-golf = { path = "../rusty-golf-actix" }
rusty-golf-setup = { path = "../rusty-golf-setup" }
