[package]
name = "rusty-golf-setup"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0"
rayon = "1"
reqwest = { version = "0", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustyline = "17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0"
tempfile = "3"
toml = "0"

[lints.rust]
unsafe_code = "forbid"
